--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -43,8 +43,14 @@
   margin-left: 5px;
 }
 
-.list-item:hover {
-  cursor: pointer;
-  background-color: #3f51b5;
-  color: white;
+.list-item {
+  &:hover {
+    cursor: pointer;
+    background-color: #3f51b5;
+    color: white;
+  }
+}
+
+.category {
+  text-transform: capitalize;
 }
